# DocumentManager

./: .env  .gitignore  Cargo.toml  Dockerfile  diesel.toml  docker-compose.yml
.github/workflows/: rust-binary-release.yml  rust-format-test-build.yml  rust-release.yml  upload-docker-file.yml
bbdd/: 01_scheme.sql
document_manager/: .env  Cargo.toml
document_manager/migrations/2024-07-06-224633_create_documents/: down.sql
document_manager/src/: config.rs  main.rs  models.rs
document_manager/src/endpoints/: delete.rs  filter.rs  mod.rs  save.rs
document_manager/src/operations/: fs.rs  mod.rs
migrations/2024-07-06-224633_create_documents/: up.sql
migrations/2024-07-07-131105_alter_table_content_data_to_bytea/: down.sql  up.sql
src/: config.rs  endpoints.rs  main.rs  models.rs  schema.rs
src/operations/: fs.rs  mod.rs
