[package]
name = "DocumentManager"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
log = "0.4.17"
env_logger = "0.11.3"
color-eyre = { version = "0.6.2", default-features = false }

actix-web = "4.0"
actix-files = "0.6"
actix-multipart = "0.6"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1", features = ["full"] }
async-std = "1.10"
futures = "0.3"

uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4.38" }
diesel = { version = "2.1.0", features = ["uuid", "chrono"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }

itertools = { version = "0.13.0" }

