[package]
name = "DocumentManager"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
log = "0.4.17"
env_logger = "0.11.3"
color-eyre = { version = "0.6.2", default-features = false }

actix-web = "4.8"
actix-files = "0.6"
actix-multipart = "0.7.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1", features = ["full"] }
async-std = "1.10"
futures = "0.3"

uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.1.0", features = ["uuid", "chrono"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }

itertools = { version = "0.13.0" }
base64 = { version = "0.22.1" }
utoipa = { version = "4.2.3", features = ["actix_extras", "non_strict_integers", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }
actix-web-lab = "0.20.2"

reqwest = { version = "0.11", features = ["blocking", "json"] }
bytes = "1.7.1"
mime_guess = "2.0.5"

